--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.notify {
+  color: White;
+  background: lightgreen;
+  font-size: 30px;
+  border-style: double;
+  border-radius: 5px;
+  padding: 10px;
+  margin: auto;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.warning {
+  color: white;
+  background: red;
+  font-size: 30px;
+  border-style: double;
+  border-radius: 5px;
+  padding: 10px;
+  margin: auto;
+}
+h2 {
+  color: red;
 }
